set notification
